# GroovyMorning_RLAC

./: .gitignore
0.GMFM_RadioFrance_Demo/0.GMFM_RadioFrance_Demo/: __GMFM_RadioFrance_DemoApp.swift
0.GMFM_RadioFrance_Demo/0.GMFM_RadioFrance_Demo.xcodeproj/: project.pbxproj
0.GMFM_RadioFrance_Demo/0.GMFM_RadioFrance_Demo/Models/: APIError.swift  AudioPlayerManager.swift  PlaybackManager.swift  RadioStation.swift
0.GMFM_RadioFrance_Demo/0.GMFM_RadioFrance_Demo/Styles/: AppTheme.swift
0.GMFM_RadioFrance_Demo/0.GMFM_RadioFrance_Demo/Views/: ContentView.swift  HomeView.swift  LiveView.swift  MainTabView.swift  PlayerView.swift  ScheduleView.swift  (+1 more)
0.GMFM_RadioFrance_Demo/0.GMFM_RadioFrance_DemoTests/: __GMFM_RadioFrance_DemoTests.swift
0.GMFM_RadioFrance_Demo/0.GMFM_RadioFrance_DemoUITests/: __GMFM_RadioFrance_DemoUITests.swift  __GMFM_RadioFrance_DemoUITestsLaunchTests.swift
1.RLAC-AudioRecorder/: .dockerignore  DECOUPAGE_INTELLIGENT.md  Dockerfile  README.md  RECORDING_SYSTEM.md  build.gradle  chronicles.json  compose.yaml  docker-compose.yaml  docker-compose.yml  gradle.settings  schedule.json  settings.gradle
1.RLAC-AudioRecorder/scripts/: deploy.sh  update.sh
2.RLAC-IAChronicleSegmenter/: .dockerignore  Dockerfile  api-server.py  cronjob  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  scheduler.py
2.RLAC-IAChronicleSegmenter/src/: live_radio_segmenter.py
3.database/: rlac.db
3.database/init.sql/: init.sql
4.r&d/0.IAAdsDetector/: main.py  pyproject.toml
4.rd/1.IAChronicleDetector/0.IAChronicleDetection/2.MachineLearningTranscription-RandomForest/: pyproject.toml  train.py  training_config.txt
4.rd/1.IAChronicleDetector/0.IAChronicleDetection/2.MachineLearningTranscription-RandomForest/models/: README.md
4.rd/1.IAChronicleDetector/1.MachineLearningAudio/: README.md  detect_chronicles.py  pyproject.toml  train_model.py
4.rd/1.IAChronicleDetector/1.MachineLearningAudio/models/: README.md
4.rd/1.IAChronicleDetector/1.MachineLearningAudio/src/: logic.py  main.py  timecodes_detection.txt  training_config.txt
4.rd/1.IAChronicleDetector/1.MachineLearningAudio/src/timecodes_files/: timecodes_02-03-2026.txt  timecodes_03-03-2026.txt  timecodes_04-03-2026.txt  timecodes_05-03-2026.txt  timecodes_11-03-2026.txt
4.rd/1.IAChronicleDetector/3.MachineLearningTranscription-Hybrid/: PROMPTS.md  Plan_attaque_gemini.md  README.md  predict.py  predictions_output.txt  pyproject.toml  test_user_regex.py  train.py  training_config.txt  utils.py
4.rd/1.IAChronicleDetector/3.MachineLearningTranscription-Hybrid/models/: README.md
4.rd/1.IAChronicleDetector/4.TransformerDetection/: PROMPTS.md  README-Training-method.md  README.md  evaluate_model_precision.py  hf_push_assets.py  predict.py  pyproject.toml  train.py
4.rd/1.IAChronicleDetector/4.TransformerDetection/models/: README.md
4.rd/1.IAChronicleDetector/4.TransformerDetection/src/: evaluation.py  utils.py
4.rd/2.SegmentTimecodeHumanVerificationUI/: Package.swift  README.md  SPECS-rlac-timecode-verification.md
4.rd/@assets/: README.md  download_franceinfo_6_9.py  franceinfo_podcasts_day.html  generate_chronicle_timecodes.py  journal_page.html  prt-generate-transcripts-with-whisper.py
(+228 files in other folders)
