[project]
name = "4-machinelearning"
version = "0.1.0"
description = "Outil de détection de chroniques radio par Machine Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "psutil>=7.2.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "joblib>=1.3.2",
    "soundfile>=0.12.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]
