[project]
name = "3-machinelearningtranscription-hybrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=4.8.4",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "protobuf>=7.34.1",
    "pytorch-crf>=0.7.2",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "srt>=3.5.3",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcrf>=1.1.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.2",
]
