[project]
name = "transformer-chronicle-detector"
version = "0.1.0"
description = "Detection of chronicles in radio transcriptions using CamemBERT"
requires-python = ">=3.10"
dependencies = [
    "transformers",
    "torch",
    "scikit-learn",
    "pandas",
    "tqdm",
    "sentencepiece",
    "protobuf",
    "accelerate>=1.1.0",
    "wandb>=0.26.0",
]

[tool.uv]
package = false
