[project]
name = "2-machinelearningtranscription-randomforest"
version = "0.1.0"
description = "Détection de chroniques radio via Random Forest sur transcription"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "scikit-learn>=1.6.1",
    "srt>=3.5.3",
    "tqdm>=4.67.3",
]
